Bug 588309 - Convert change password to a doorhanger panel. (a=tests)
UltraBlame original commit: 77070aa1f91794f0aee4736a8e1a783b7061278c

--- a/toolkit/components/passwordmgr/test/test_notifications.html
+++ b/toolkit/components/passwordmgr/test/test_notifications.html
@@ -637,28 +637,6 @@ testNum
 +
 +
 ;
-/
-/
-Remove
-any
-notification
-bar
-that
-might
-be
-lingering
-from
-a
-failed
-test
-.
-notifyBox
-.
-removeAllNotifications
-(
-true
-)
-;
 if
 (
 testNum
@@ -729,7 +707,7 @@ checkTest
 )
 {
 var
-bar
+popup
 notificationText
 expectedText
 ;
@@ -845,11 +823,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -859,18 +837,18 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
-clickNotificationButton
+popup
+.
+remove
 (
-bar
-kNotNowButton
 )
 ;
 break
@@ -912,11 +890,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -926,11 +904,11 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
@@ -962,9 +940,9 @@ enabled
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kNeverButton
 )
 ;
@@ -1008,11 +986,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1023,13 +1001,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -1124,11 +1102,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1138,11 +1116,11 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
@@ -1181,9 +1159,9 @@ yet
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kRememberButton
 )
 ;
@@ -1234,11 +1212,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1249,13 +1227,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -1429,7 +1407,7 @@ we
 re
 getting
 the
-bar
+popup
 again
 .
 is
@@ -1458,11 +1436,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1472,18 +1450,18 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
-clickNotificationButton
+popup
+.
+remove
 (
-bar
-kNotNowButton
 )
 ;
 /
@@ -1548,11 +1526,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1563,13 +1541,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -1607,7 +1585,7 @@ we
 re
 getting
 the
-bar
+popup
 again
 .
 is
@@ -1636,11 +1614,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1650,18 +1628,18 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
-clickNotificationButton
+popup
+.
+remove
 (
-bar
-kNotNowButton
 )
 ;
 break
@@ -1686,7 +1664,7 @@ Check
 for
 no
 notification
-bar
+popup
 when
 autocomplete
 =
@@ -1718,11 +1696,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1733,13 +1711,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -1754,7 +1732,7 @@ Check
 for
 no
 notification
-bar
+popup
 when
 autocomplete
 =
@@ -1786,11 +1764,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1801,13 +1779,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -1822,7 +1800,7 @@ Check
 for
 no
 notification
-bar
+popup
 when
 autocomplete
 =
@@ -1854,11 +1832,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1869,13 +1847,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -1901,7 +1879,7 @@ Check
 for
 no
 notification
-bar
+popup
 when
 no
 password
@@ -1933,11 +1911,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1948,13 +1926,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -1985,7 +1963,7 @@ Check
 for
 no
 notification
-bar
+popup
 when
 existing
 pw
@@ -2021,11 +1999,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2036,13 +2014,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -2079,7 +2057,7 @@ Check
 for
 no
 notification
-bar
+popup
 when
 pw
 -
@@ -2115,11 +2093,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2130,13 +2108,13 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
 notification
-bar
+popup
 "
 )
 ;
@@ -2172,7 +2150,7 @@ case
 Check
 for
 notification
-bar
+popup
 when
 existing
 pw
@@ -2211,11 +2189,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2225,18 +2203,12 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
-)
-;
-clickNotificationButton
-(
-bar
-kNotNowButton
 )
 ;
 pwmgr
@@ -2244,6 +2216,12 @@ pwmgr
 removeLogin
 (
 login2B
+)
+;
+popup
+.
+remove
+(
 )
 ;
 /
@@ -2271,7 +2249,7 @@ case
 Check
 for
 notification
-bar
+popup
 when
 pw
 -
@@ -2310,11 +2288,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2324,18 +2302,12 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
-)
-;
-clickNotificationButton
-(
-bar
-kNotNowButton
 )
 ;
 pwmgr
@@ -2343,6 +2315,12 @@ pwmgr
 removeLogin
 (
 login1B
+)
+;
+popup
+.
+remove
+(
 )
 ;
 /
@@ -2372,7 +2350,7 @@ for
 change
 -
 password
-bar
+popup
 u
 +
 p
@@ -2413,11 +2391,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2427,17 +2405,17 @@ change
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kDontChangeButton
 )
 ;
@@ -2453,7 +2431,7 @@ for
 change
 -
 password
-bar
+popup
 u
 +
 p
@@ -2490,11 +2468,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2504,17 +2482,17 @@ change
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kChangeButton
 )
 ;
@@ -2722,7 +2700,7 @@ for
 change
 -
 password
-bar
+popup
 p
 -
 only
@@ -2778,11 +2756,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2792,17 +2770,17 @@ change
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kChangeButton
 )
 ;
@@ -2818,7 +2796,7 @@ for
 change
 -
 password
-bar
+popup
 p
 -
 only
@@ -2855,11 +2833,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2869,17 +2847,17 @@ change
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kChangeButton
 )
 ;
@@ -2905,7 +2883,7 @@ user
 +
 pass
 notification
-bar
+popup
 is
 (
 gotUser
@@ -2932,11 +2910,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -2946,11 +2924,11 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
@@ -2969,14 +2947,9 @@ string
 .
 notificationText
 =
-bar
+popup
 .
-getAttribute
-(
-"
-label
-"
-)
+message
 ;
 expectedText
 =
@@ -3022,10 +2995,10 @@ text
 notificationText
 )
 ;
-clickNotificationButton
+popup
+.
+remove
 (
-bar
-kNotNowButton
 )
 ;
 break
@@ -3043,7 +3016,7 @@ user
 +
 pass
 notification
-bar
+popup
 username
 is
 really
@@ -3074,11 +3047,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -3088,11 +3061,11 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
@@ -3111,14 +3084,9 @@ string
 .
 notificationText
 =
-bar
+popup
 .
-getAttribute
-(
-"
-label
-"
-)
+message
 ;
 expectedText
 =
@@ -3168,10 +3136,10 @@ text
 notificationText
 )
 ;
-clickNotificationButton
+popup
+.
+remove
 (
-bar
-kNotNowButton
 )
 ;
 break
@@ -3189,7 +3157,7 @@ pass
 -
 only
 notification
-bar
+popup
 is
 (
 gotUser
@@ -3216,11 +3184,11 @@ password
 "
 )
 ;
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -3230,11 +3198,11 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
 notification
-bar
+popup
 "
 )
 ;
@@ -3253,14 +3221,9 @@ string
 .
 notificationText
 =
-bar
+popup
 .
-getAttribute
-(
-"
-label
-"
-)
+message
 ;
 expectedText
 =
@@ -3300,10 +3263,10 @@ text
 notificationText
 )
 ;
-clickNotificationButton
+popup
+.
+remove
 (
-bar
-kNotNowButton
 )
 ;
 break
@@ -3723,13 +3686,11 @@ handleLoad
 ;
 /
 /
-The
-notification
-box
+popupNotifications
 (
 not
 *
-bar
+popup
 *
 )
 is
@@ -3752,9 +3713,9 @@ it
 once
 .
 var
-notifyBox
+popupNotifications
 =
-getNotificationBox
+getPopupNotifications
 (
 window
 .
@@ -3763,34 +3724,11 @@ top
 ;
 ok
 (
-notifyBox
+popupNotifications
 "
 Got
-notification
-box
+popupNotifications
 "
-)
-;
-/
-/
-Remove
-any
-notification
-bars
-that
-might
-be
-left
-over
-from
-other
-tests
-.
-notifyBox
-.
-removeAllNotifications
-(
-true
 )
 ;
 var
