--- a/toolkit/components/passwordmgr/test/test_privbrowsing.html
+++ b/toolkit/components/passwordmgr/test/test_privbrowsing.html
@@ -792,7 +792,7 @@ checkTest
 )
 {
 var
-bar
+popup
 ;
 switch
 (
@@ -809,15 +809,15 @@ outside
 of
 private
 mode
+popup
 notification
-bar
 should
 appear
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -827,19 +827,18 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
+popup
 notification
-bar
 "
 )
 ;
-notifyBox
+popup
 .
-removeAllNotifications
+remove
 (
-true
 )
 ;
 break
@@ -854,16 +853,16 @@ inside
 of
 private
 mode
+popup
 notification
-bar
 should
 not
 appear
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -874,21 +873,14 @@ save
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
+popup
 notification
-bar
 "
-)
-;
-notifyBox
-.
-removeAllNotifications
-(
-true
 )
 ;
 break
@@ -903,15 +895,15 @@ outside
 of
 private
 mode
+popup
 notification
-bar
 should
 appear
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -921,19 +913,18 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
+popup
 notification
-bar
 "
 )
 ;
-notifyBox
+popup
 .
-removeAllNotifications
+remove
 (
-true
 )
 ;
 break
@@ -948,15 +939,15 @@ outside
 of
 private
 mode
+popup
 notification
-bar
 should
 appear
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -966,19 +957,18 @@ change
 ;
 ok
 (
-bar
+popup
 "
 got
+popup
 notification
-bar
 "
 )
 ;
-notifyBox
+popup
 .
-removeAllNotifications
+remove
 (
-true
 )
 ;
 break
@@ -993,16 +983,16 @@ inside
 of
 private
 mode
+popup
 notification
-bar
 should
 not
 appear
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1013,21 +1003,14 @@ change
 ok
 (
 !
-bar
+popup
 "
 checking
 for
 no
+popup
 notification
-bar
 "
-)
-;
-notifyBox
-.
-removeAllNotifications
-(
-true
 )
 ;
 break
@@ -1042,15 +1025,15 @@ outside
 of
 private
 mode
+popup
 notification
-bar
 should
 appear
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -1060,19 +1043,18 @@ change
 ;
 ok
 (
-bar
+popup
 "
 got
+popup
 notification
-bar
 "
 )
 ;
-notifyBox
+popup
 .
-removeAllNotifications
+remove
 (
-true
 )
 ;
 pwmgr
@@ -1596,28 +1578,6 @@ checkTest
 (
 )
 ;
-/
-/
-Remove
-any
-notification
-bar
-that
-might
-be
-lingering
-from
-a
-failed
-test
-.
-notifyBox
-.
-removeAllNotifications
-(
-true
-)
-;
 if
 (
 testNum
@@ -1976,13 +1936,11 @@ handleLoad
 ;
 /
 /
-The
-notification
-box
+popupNotifications
 (
 not
 *
-bar
+popup
 *
 )
 is
@@ -2005,9 +1963,9 @@ it
 once
 .
 var
-notifyBox
+popupNotifications
 =
-getNotificationBox
+getPopupNotifications
 (
 window
 .
@@ -2016,34 +1974,11 @@ top
 ;
 ok
 (
-notifyBox
+popupNotifications
 "
 Got
-notification
-box
+popupNotifications
 "
-)
-;
-/
-/
-Remove
-any
-notification
-bars
-that
-might
-be
-left
-over
-from
-other
-tests
-.
-notifyBox
-.
-removeAllNotifications
-(
-true
 )
 ;
 SimpleTest
