--- a/toolkit/components/passwordmgr/test/test_prompt.html
+++ b/toolkit/components/passwordmgr/test/test_prompt.html
@@ -3384,8 +3384,8 @@ change
 password
 /
 /
+popup
 notification
-bar
 )
 .
 startCallbackTimer
@@ -3470,18 +3470,18 @@ password
 Check
 for
 the
+popup
 notification
-bar
 and
 change
 the
 password
 .
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -3491,18 +3491,24 @@ change
 ;
 ok
 (
-bar
+popup
 "
 got
+popup
 notification
-bar
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kChangeButton
+)
+;
+popup
+.
+remove
+(
 )
 ;
 /
@@ -3592,8 +3598,8 @@ a
 change
 -
 password
+popup
 notification
-bar
 .
 startCallbackTimer
 (
@@ -3681,18 +3687,18 @@ password
 Check
 for
 the
+popup
 notification
-bar
 and
 change
 the
 password
 .
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -3702,18 +3708,24 @@ change
 ;
 ok
 (
-bar
+popup
 "
 got
+popup
 notification
-bar
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kChangeButton
+)
+;
+popup
+.
+remove
+(
 )
 ;
 /
@@ -3939,18 +3951,18 @@ password
 Check
 for
 the
+popup
 notification
-bar
 and
 change
 the
 password
 .
-bar
+popup
 =
-getNotificationBar
+getPopup
 (
-notifyBox
+popupNotifications
 "
 password
 -
@@ -3960,18 +3972,24 @@ save
 ;
 ok
 (
-bar
+popup
 "
 got
+popup
 notification
-bar
 "
 )
 ;
-clickNotificationButton
+clickPopupButton
 (
-bar
+popup
 kRememberButton
+)
+;
+popup
+.
+remove
+(
 )
 ;
 finishTest
@@ -4308,13 +4326,11 @@ isOk
 ;
 /
 /
-The
-notification
-box
+popupNotifications
 (
 not
 *
-bar
+popup
 *
 )
 is
@@ -4337,9 +4353,9 @@ it
 once
 .
 var
-notifyBox
+popupNotifications
 =
-getNotificationBox
+getPopupNotifications
 (
 window
 .
@@ -4348,34 +4364,11 @@ top
 ;
 ok
 (
-notifyBox
+popupNotifications
 "
 Got
-notification
-box
+popupNotifications
 "
-)
-;
-/
-/
-Remove
-any
-notification
-bars
-that
-might
-be
-left
-over
-from
-other
-tests
-.
-notifyBox
-.
-removeAllNotifications
-(
-true
 )
 ;
 /
@@ -9080,8 +9073,8 @@ check
 for
 and
 kill
+popup
 notification
-bar
 ?
 ?
 /
