--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1196,25 +1196,6 @@ start
 5em
 ;
 }
-#
-appmenu
--
-button
->
-menupopup
->
-menuitem
-{
--
-moz
--
-padding
--
-end
-:
-16px
-;
-}
 .
 split
 -
@@ -1230,6 +1211,13 @@ menuactive
 true
 "
 ]
+:
+not
+(
+[
+disabled
+]
+)
 .
 split
 -
@@ -1245,6 +1233,71 @@ menuactive
 true
 "
 ]
+:
+not
+(
+[
+disabled
+]
+)
+:
+-
+moz
+-
+any
+(
+#
+appmenuPrimaryPane
+#
+appmenuSecondaryPane
+)
+>
+menu
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+:
+not
+(
+[
+disabled
+]
+)
+:
+-
+moz
+-
+any
+(
+#
+appmenuPrimaryPane
+#
+appmenuSecondaryPane
+)
+>
+menuitem
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+:
+not
+(
+[
+disabled
+]
+)
 {
 background
 -
