--- a/toolkit/mozapps/extensions/content/extensions.css
+++ b/toolkit/mozapps/extensions/content/extensions.css
@@ -853,6 +853,64 @@ addon
 relnotes
 -
 toggle
+.
+view
+-
+pane
+:
+not
+(
+#
+updates
+-
+view
+)
+.
+addon
+.
+include
+-
+update
+#
+updates
+-
+view
+:
+not
+(
+[
+updatetype
+=
+"
+available
+"
+]
+)
+.
+addon
+.
+include
+-
+update
+#
+updates
+-
+view
+[
+updatetype
+=
+"
+available
+"
+]
+.
+addon
+.
+update
+-
+available
+-
+notice
 {
 display
 :
