Bug 587341 - Implement Undo Close Group inside of Tab Candy [r+a=dietrich]
UltraBlame original commit: a6b04551c72aff25bbdef2845a69fd51390c513f

--- a/browser/base/content/tabview/tabview.css
+++ b/browser/base/content/tabview/tabview.css
@@ -273,6 +273,30 @@ absolute
 ;
 }
 .
+undo
+{
+position
+:
+absolute
+;
+}
+.
+undo
+.
+close
+{
+display
+:
+inline
+-
+block
+;
+position
+:
+relative
+;
+}
+.
 info
 -
 item
