Bug 578553 - Implement App-Tab experience in Panorama; [a+r=dietrich]
UltraBlame original commit: a6fd7402dfe65ae5ac12c3c89105260040a69f25

--- a/browser/themes/winstripe/browser/tabview/tabview.css
+++ b/browser/themes/winstripe/browser/tabview/tabview.css
@@ -1010,6 +1010,34 @@ radius
 ;
 }
 .
+appTabTray
+{
+top
+:
+34px
+;
+right
+:
+1px
+;
+}
+.
+appTabIcon
+{
+width
+:
+16px
+;
+height
+:
+16px
+;
+cursor
+:
+pointer
+;
+}
+.
 info
 -
 item
