--- a/browser/themes/gnomestripe/browser/tabview/tabview.css
+++ b/browser/themes/gnomestripe/browser/tabview/tabview.css
@@ -904,6 +904,34 @@ radius
 ;
 }
 .
+appTabTray
+{
+top
+:
+34px
+;
+right
+:
+1px
+;
+}
+.
+appTabIcon
+{
+width
+:
+16px
+;
+height
+:
+16px
+;
+cursor
+:
+pointer
+;
+}
+.
 info
 -
 item
