Bug 591325 Fix regression due to relativesrcdir landing in xpchsell test, continued cleanup in chrome tets r=ctalbert a=NPOTB
UltraBlame original commit: 47c6a53ffd8cbc5f9c610a39008e2d2893148339

--- a/layout/forms/test/bug536567_subframe.html
+++ b/layout/forms/test/bug536567_subframe.html
@@ -36,6 +36,32 @@ js
 script
 >
 <
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+mockObjects
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -77,88 +103,6 @@ enablePrivilege
 "
 UniversalXPConnect
 "
-)
-;
-const
-Cc
-=
-Components
-.
-classes
-;
-const
-Ci
-=
-Components
-.
-interfaces
-;
-const
-Cu
-=
-Components
-.
-utils
-;
-const
-Cm
-=
-Components
-.
-manager
-;
-Cc
-[
-"
-mozilla
-.
-org
-/
-moz
-/
-jssubscript
--
-loader
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-mozIJSSubScriptLoader
-)
-.
-loadSubScript
-(
-"
-chrome
-:
-/
-/
-mochikit
-/
-content
-/
-browser
-/
-toolkit
-/
-content
-/
-tests
-/
-browser
-/
-common
-/
-mockObjects
-.
-js
-"
-this
 )
 ;
 Cu
