Bug 588014 - Format clickable output to look like being clickable, r+a=dietrich
UltraBlame original commit: 7654e8418f8620f0f74b0796c931e0a7412d0180

--- a/toolkit/themes/gnomestripe/global/webConsole.css
+++ b/toolkit/themes/gnomestripe/global/webConsole.css
@@ -16,6 +16,19 @@ aaa
 .
 hud
 -
+group
+label
+{
+padding
+-
+left
+:
+1em
+;
+}
+.
+hud
+-
 outer
 -
 wrapper
@@ -109,6 +122,24 @@ user
 focus
 :
 normal
+;
+}
+.
+hud
+-
+clickable
+{
+cursor
+:
+pointer
+!
+important
+;
+text
+-
+decoration
+:
+underline
 ;
 }
 .
@@ -248,15 +279,6 @@ left
 0
 .
 3em
-;
-border
--
-bottom
-:
-1px
-solid
-#
-eee
 ;
 }
 .
