--- a/toolkit/themes/pinstripe/global/webConsole.css
+++ b/toolkit/themes/pinstripe/global/webConsole.css
@@ -21,6 +21,19 @@ aaa
 .
 hud
 -
+group
+label
+{
+padding
+-
+left
+:
+1em
+;
+}
+.
+hud
+-
 outer
 -
 wrapper
@@ -114,6 +127,24 @@ user
 focus
 :
 normal
+;
+}
+.
+hud
+-
+clickable
+{
+cursor
+:
+pointer
+!
+important
+;
+text
+-
+decoration
+:
+underline
 ;
 }
 .
@@ -253,15 +284,6 @@ left
 0
 .
 3em
-;
-border
--
-bottom
-:
-1px
-solid
-#
-eee
 ;
 }
 .
