--- a/toolkit/themes/winstripe/global/webConsole.css
+++ b/toolkit/themes/winstripe/global/webConsole.css
@@ -671,6 +671,30 @@ align
 :
 center
 ;
+-
+moz
+-
+appearance
+:
+none
+!
+important
+;
+background
+-
+color
+:
+-
+moz
+-
+dialog
+;
+border
+-
+top
+:
+none
+;
 }
 .
 jsterm
