--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -14821,6 +14821,48 @@ repeat
 ;
 }
 #
+invalid
+-
+form
+-
+popup
+{
+-
+moz
+-
+appearance
+:
+none
+;
+background
+-
+color
+:
+#
+fffcd6
+;
+border
+:
+1px
+solid
+#
+dad8b6
+;
+padding
+:
+5px
+5px
+5px
+5px
+;
+font
+-
+weight
+:
+bold
+;
+}
+#
 notification
 -
 popup
