Bug 432287 - add buttons and icons for zoom in/out to toolbar customization palette. r=mano ui-r=faaborg
UltraBlame original commit: bf347202194887c0b5e7f3dac7996a5e6e6cf56a

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -4994,6 +4994,80 @@ toolbar
 )
 ;
 }
+#
+zoom
+-
+out
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+zoom
+-
+out
+?
+size
+=
+toolbar
+"
+)
+;
+}
+#
+zoom
+-
+in
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+zoom
+-
+in
+?
+size
+=
+toolbar
+"
+)
+;
+}
 toolbar
 [
 iconsize
@@ -6618,6 +6692,96 @@ stock
 gtk
 -
 fullscreen
+?
+size
+=
+menu
+"
+)
+;
+}
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+zoom
+-
+out
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+zoom
+-
+out
+?
+size
+=
+menu
+"
+)
+;
+}
+toolbar
+[
+iconsize
+=
+"
+small
+"
+]
+#
+zoom
+-
+in
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+zoom
+-
+in
 ?
 size
 =
