--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -806,7 +806,9 @@ rgba
 )
 0
 1px
-2px
+1
+.
+5px
 rgba
 (
 0
@@ -1008,7 +1010,9 @@ rgba
 inset
 0
 0
-2px
+1
+.
+5px
 1px
 rgba
 (
@@ -1092,7 +1096,7 @@ shadow
 :
 0
 2px
-4px
+3px
 rgba
 (
 0
@@ -1498,7 +1502,7 @@ shadow
 :
 1px
 0
-3px
+2px
 rgb
 (
 204
@@ -3375,7 +3379,7 @@ shadow
 :
 0
 0
-3px
+2px
 white
 ;
 }
@@ -4012,7 +4016,9 @@ inset
 0
 0
 0
-2px
+1
+.
+5px
 rgba
 (
 255
@@ -4035,6 +4041,8 @@ rgba
 )
 0
 0
+3
+.
 5px
 hsl
 (
@@ -4261,7 +4269,9 @@ shadow
 :
 0
 0
-9px
+6
+.
+5px
 rgba
 (
 0
@@ -4273,7 +4283,7 @@ rgba
 inset
 0
 0
-3px
+2px
 rgba
 (
 0
@@ -5382,7 +5392,9 @@ shadow
 :
 0
 0
-9px
+6
+.
+5px
 rgba
 (
 0
@@ -5394,7 +5406,7 @@ rgba
 inset
 0
 0
-3px
+2px
 rgba
 (
 0
@@ -9011,7 +9023,9 @@ shadow
 :
 0
 0
-9px
+6
+.
+5px
 rgba
 (
 0
@@ -9023,7 +9037,7 @@ rgba
 inset
 0
 0
-3px
+2px
 rgba
 (
 0
@@ -14752,7 +14766,7 @@ rgb
 )
 0
 0
-3px
+2px
 rgb
 (
 27
@@ -14812,7 +14826,7 @@ shadow
 :
 1px
 1px
-3px
+2px
 rgb
 (
 12
@@ -15267,7 +15281,9 @@ shadow
 :
 0
 0
-2px
+1
+.
+5px
 ThreeDShadow
 ;
 }
