--- a/toolkit/themes/pinstripe/global/viewbuttons.css
+++ b/toolkit/themes/pinstripe/global/viewbuttons.css
@@ -253,6 +253,8 @@ inset
 2A2A2A
 0
 3px
+3
+.
 5px
 ;
 }
@@ -302,6 +304,8 @@ inset
 1c1c1c
 0
 3px
+3
+.
 5px
 ;
 }
@@ -431,6 +435,8 @@ rgba
 )
 0
 3px
+3
+.
 5px
 ;
 }
