--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -9508,7 +9508,9 @@ shadow
 :
 0
 0
-9px
+6
+.
+5px
 rgba
 (
 0
@@ -9520,7 +9522,7 @@ rgba
 inset
 0
 0
-3px
+2px
 rgba
 (
 0
@@ -12447,7 +12449,7 @@ shadow
 :
 0
 0
-7px
+5px
 5px
 Highlight
 inset
