--- a/browser/themes/gnomestripe/browser/tabview/tabview.css
+++ b/browser/themes/gnomestripe/browser/tabview/tabview.css
@@ -137,7 +137,9 @@ rgba
 inset
 0
 1px
-2px
+1
+.
+5px
 rgba
 (
 0
@@ -591,7 +593,7 @@ rgba
 )
 1px
 1px
-6px
+4px
 ;
 }
 .
@@ -616,7 +618,9 @@ rgba
 )
 1px
 1px
-2px
+1
+.
+5px
 ;
 color
 :
@@ -668,6 +672,8 @@ rgba
 )
 0px
 0px
+3
+.
 5px
 -
 1px
@@ -812,7 +818,7 @@ rgba
 )
 1px
 1px
-4px
+3px
 ;
 }
 .
@@ -838,7 +844,9 @@ rgba
 )
 1px
 1px
-8px
+5
+.
+5px
 ;
 }
 .
@@ -884,7 +892,9 @@ shadow
 :
 3px
 3px
-8px
+5
+.
+5px
 rgba
 (
 0
@@ -1156,7 +1166,7 @@ rgba
 )
 1px
 1px
-4px
+3px
 ;
 }
 .
@@ -1357,7 +1367,7 @@ shadow
 :
 5px
 5px
-4px
+3px
 rgba
 (
 0
@@ -1380,7 +1390,7 @@ shadow
 :
 2px
 2px
-10px
+7px
 -
 1px
 rgba
@@ -1934,7 +1944,7 @@ rgba
 )
 0px
 0px
-13px
+9px
 rgba
 (
 0
@@ -2065,7 +2075,7 @@ rgba
 inset
 6px
 6px
-13px
+9px
 rgba
 (
 0
