--- a/browser/themes/pinstripe/browser/tabview/tabview.css
+++ b/browser/themes/pinstripe/browser/tabview/tabview.css
@@ -96,7 +96,9 @@ shadow
 :
 0
 1px
-2px
+1
+.
+5px
 rgba
 (
 0
@@ -624,7 +626,7 @@ rgba
 )
 1px
 1px
-6px
+4px
 ;
 }
 .
@@ -649,7 +651,9 @@ rgba
 )
 1px
 1px
-2px
+1
+.
+5px
 ;
 color
 :
@@ -696,7 +700,9 @@ shadow
 :
 0
 0
-8px
+5
+.
+5px
 -
 moz
 -
@@ -858,7 +864,7 @@ shadow
 :
 0
 1px
-4px
+3px
 rgba
 (
 0
@@ -907,7 +913,9 @@ rgba
 )
 1px
 1px
-8px
+5
+.
+5px
 ;
 }
 .
@@ -955,7 +963,9 @@ shadow
 :
 3px
 3px
-8px
+5
+.
+5px
 rgba
 (
 0
@@ -1227,7 +1237,7 @@ rgba
 )
 1px
 1px
-4px
+3px
 ;
 }
 .
@@ -1428,7 +1438,7 @@ shadow
 :
 5px
 5px
-4px
+3px
 rgba
 (
 0
@@ -1451,7 +1461,7 @@ shadow
 :
 2px
 2px
-10px
+7px
 -
 1px
 rgba
