--- a/browser/themes/winstripe/browser/tabview/tabview.css
+++ b/browser/themes/winstripe/browser/tabview/tabview.css
@@ -165,7 +165,9 @@ rgba
 inset
 0
 1px
-2px
+1
+.
+5px
 rgba
 (
 4
@@ -643,7 +645,7 @@ rgba
 )
 1px
 1px
-6px
+4px
 ;
 }
 .
@@ -668,7 +670,9 @@ rgba
 )
 1px
 1px
-2px
+1
+.
+5px
 ;
 color
 :
@@ -741,7 +745,9 @@ FFFFFF
 inset
 0
 0
-8px
+5
+.
+5px
 #
 007ECE
 ;
@@ -921,7 +927,7 @@ rgba
 inset
 0
 1px
-4px
+3px
 rgba
 (
 4
@@ -956,7 +962,9 @@ rgba
 )
 1px
 1px
-8px
+5
+.
+5px
 ;
 }
 .
@@ -990,7 +998,9 @@ shadow
 :
 3px
 3px
-8px
+5
+.
+5px
 rgba
 (
 0
@@ -1262,7 +1272,7 @@ rgba
 )
 1px
 1px
-4px
+3px
 ;
 }
 .
@@ -1463,7 +1473,7 @@ shadow
 :
 5px
 5px
-4px
+3px
 rgba
 (
 0
@@ -1486,7 +1496,7 @@ shadow
 :
 2px
 2px
-10px
+7px
 -
 1px
 rgba
@@ -2040,7 +2050,7 @@ rgba
 )
 0px
 0px
-13px
+9px
 rgba
 (
 0
@@ -2171,7 +2181,7 @@ rgba
 inset
 6px
 6px
-13px
+9px
 rgba
 (
 0
