--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -1714,7 +1714,9 @@ shadow
 inset
 3px
 3px
-8px
+5
+.
+5px
 #
 555
 ;
@@ -3917,7 +3919,9 @@ shadow
 777
 1px
 1px
-2px
+1
+.
+5px
 ;
 width
 :
@@ -4494,7 +4498,7 @@ shadow
 00FF00
 0px
 0px
-6px
+4px
 -
 1px
 ;
@@ -4519,7 +4523,7 @@ shadow
 FFD800
 0px
 0px
-6px
+4px
 -
 1px
 ;
@@ -4544,7 +4548,7 @@ shadow
 FF0000
 0px
 0px
-6px
+4px
 -
 1px
 ;
