--- a/layout/style/test/test_dont_use_document_colors.html
+++ b/layout/style/test/test_dont_use_document_colors.html
@@ -150,9 +150,6 @@ shadow
 2px
 green
 ;
--
-moz
--
 box
 -
 shadow
@@ -928,14 +925,11 @@ isnot
 (
 cs1
 .
-MozBoxShadow
+boxShadow
 cs2
 .
-MozBoxShadow
+boxShadow
 "
--
-moz
--
 box
 -
 shadow
@@ -1056,14 +1050,11 @@ is
 (
 cs1
 .
-MozBoxShadow
+boxShadow
 cs3
 .
-MozBoxShadow
+boxShadow
 "
--
-moz
--
 box
 -
 shadow
@@ -1779,14 +1770,11 @@ is
 (
 cs1
 .
-MozBoxShadow
+boxShadow
 cs2
 .
-MozBoxShadow
+boxShadow
 "
--
-moz
--
 box
 -
 shadow
