Remove support for min() and max() in calc(): remove support for parsing and storage.  (Bug 363249)  r=bzbarsky  a2.0=blocking2.0:beta6
UltraBlame original commit: 5ab6d6489a64cd54272943b4df0e64ceb34b3af6

--- a/layout/reftests/css-calc/border-radius-1.html
+++ b/layout/reftests/css-calc/border-radius-1.html
@@ -65,21 +65,20 @@ moz
 -
 calc
 (
-min
-(
-20px
+10px
++
 1
 %
-)
 )
 -
 moz
 -
-max
+calc
 (
-3px
 2
 %
+-
+3px
 )
 /
 -
@@ -90,9 +89,9 @@ calc
 3
 %
 -
-min
 (
 1px
++
 1
 %
 )
