Bug 593126 - Reword text in the private browsing mode content area page based on the menu structure; r=dao a=blocking-beta6+
UltraBlame original commit: 4e868145aa6bac0f9e7d0a09cbdae870671d7dd3

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -521,6 +521,114 @@ dtd
 %
 browserDTD
 ;
+#
+ifdef
+XP_WIN
+<
+!
+ENTITY
+basePBMenu
+.
+label
+"
+<
+span
+class
+=
+'
+appMenuButton
+'
+>
+&
+brandShortName
+;
+<
+/
+span
+>
+<
+span
+class
+=
+'
+toolsMenu
+'
+>
+&
+toolsMenu
+.
+label
+;
+<
+/
+span
+>
+"
+>
+#
+elifdef
+XP_MACOSX
+<
+!
+ENTITY
+basePBMenu
+.
+label
+"
+&
+toolsMenu
+.
+label
+;
+"
+>
+#
+else
+<
+!
+ENTITY
+basePBMenu
+.
+label
+"
+<
+span
+class
+=
+'
+appMenuButton
+'
+>
+&
+appMenuButton
+.
+label
+;
+<
+/
+span
+>
+<
+span
+class
+=
+'
+toolsMenu
+'
+>
+&
+toolsMenu
+.
+label
+;
+<
+/
+span
+>
+"
+>
+#
+endif
 <
 !
 ENTITY
@@ -666,6 +774,28 @@ body
 private
 .
 showNormal
+{
+display
+:
+none
+;
+}
+body
+.
+appMenuButtonVisible
+.
+toolsMenu
+{
+display
+:
+none
+;
+}
+body
+.
+appMenuButtonInvisible
+.
+appMenuButton
 {
 display
 :
@@ -1117,6 +1247,79 @@ browsing
 "
 )
 ;
+/
+/
+Show
+the
+correct
+menu
+structure
+based
+on
+whether
+the
+App
+Menu
+button
+is
+/
+/
+shown
+or
+not
+.
+var
+menuBar
+=
+mainWindow
+.
+document
+.
+getElementById
+(
+"
+toolbar
+-
+menubar
+"
+)
+;
+var
+appMenuButtonIsVisible
+=
+menuBar
+.
+getAttribute
+(
+"
+autohide
+"
+)
+=
+=
+"
+true
+"
+;
+document
+.
+body
+.
+classList
+.
+add
+(
+appMenuButtonIsVisible
+?
+"
+appMenuButtonVisible
+"
+:
+"
+appMenuButtonInvisible
+"
+)
+;
 }
 false
 )
@@ -1507,7 +1710,7 @@ showPrivate
 &
 privatebrowsingpage
 .
-howToStop
+howToStop2
 ;
 <
 /
@@ -1529,7 +1732,7 @@ showNormal
 &
 privatebrowsingpage
 .
-howToStart
+howToStart2
 ;
 <
 /
