--- a/browser/base/content/aboutDialog.css
+++ b/browser/base/content/aboutDialog.css
@@ -33,28 +33,28 @@ start
 ;
 width
 :
-299px
-;
-}
-#
-modes
-{
-min
--
-height
-:
-400px
+600px
 ;
 }
 #
 clientBox
 {
-min
+background
 -
-width
+color
 :
-300px
+#
+F7F7F7
 ;
+color
+:
+#
+222222
+;
+}
+#
+leftBox
+{
 background
 -
 image
@@ -71,6 +71,8 @@ branding
 content
 /
 about
+-
+logo
 .
 png
 "
@@ -84,261 +86,152 @@ no
 -
 repeat
 ;
-background
+min
 -
-color
+width
 :
-#
-FFFFFF
+210px
 ;
-padding
+min
 -
-top
+height
 :
-203px
-;
-color
-:
-#
-000000
-;
-}
-#
-brandName
-{
-font
--
-weight
-:
-bold
-;
-font
--
-size
-:
-larger
-;
-}
-#
-userAgent
-{
-direction
-:
-ltr
+210px
 ;
 margin
 -
 top
 :
+20px
+;
+-
+moz
+-
+margin
+-
+start
+:
+30px
+;
+}
+#
+rightBox
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+branding
+/
+content
+/
+about
+-
+wordmark
+.
+png
+"
+)
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+padding
+-
+top
+:
+38px
+;
+margin
+-
+top
+:
+20px
+;
+-
+moz
+-
+margin
+-
+end
+:
+30px
+;
+-
+moz
+-
+margin
+-
+start
+:
+30px
+;
+}
+#
+rightBox
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+:
+100
+%
+0
+;
+}
+#
+bottomBox
+{
+padding
+:
+15px
 10px
-;
--
-moz
--
-margin
--
-end
-:
-13px
-;
-margin
--
-bottom
-:
-0
-;
--
-moz
--
-margin
--
-start
-:
-13px
-;
-background
--
-color
-:
-#
-FFFFFF
-;
-color
-:
-#
-000000
-;
-padding
--
-top
-:
-1px
-;
--
-moz
--
-padding
--
-end
-:
-1px
-;
-padding
--
-bottom
-:
-1px
-;
--
-moz
--
-padding
--
-start
-:
-3px
-;
--
-moz
--
-appearance
-:
-none
-;
-overflow
-:
-hidden
-;
-border
-:
-0
-;
-}
-#
-groove
-{
-margin
--
-top
-:
-0
-;
-}
-#
-creditsIframe
-{
-cursor
-:
-default
-;
--
-moz
--
-user
--
-select
-:
-none
-;
-border
-:
 0
 ;
 }
 #
 version
 {
-font
--
-weight
-:
-bold
-;
-color
-:
-#
-909090
-;
 margin
 -
 top
 :
-1em
+5px
 ;
--
-moz
--
-margin
--
-end
+}
+#
+released
+{
+color
 :
-0
-;
-margin
--
-bottom
-:
-10px
-;
--
-moz
--
-margin
--
-start
-:
-17px
+#
+666666
 ;
 }
 #
 distribution
-{
-font
--
-weight
-:
-bold
-;
-color
-:
-#
-909090
-;
-display
-:
-none
-;
-margin
--
-top
-:
-0
-;
--
-moz
--
-margin
--
-end
-:
-0
-;
-margin
--
-bottom
-:
-0
-;
--
-moz
--
-margin
--
-start
-:
-17px
-;
-}
 #
 distributionId
 {
@@ -348,11 +241,6 @@ weight
 :
 bold
 ;
-color
-:
-#
-909090
-;
 display
 :
 none
@@ -363,15 +251,20 @@ top
 :
 0
 ;
--
-moz
--
 margin
 -
-end
+bottom
 :
 0
 ;
+}
+#
+checkForUpdatesButton
+.
+text
+-
+blurb
+{
 margin
 -
 bottom
@@ -385,81 +278,26 @@ margin
 -
 start
 :
-17px
-;
-}
-#
-copyright
-{
-margin
--
-top
-:
 0
 ;
 -
 moz
 -
-margin
--
-end
-:
-16px
-;
-margin
--
-bottom
-:
-3px
-;
--
-moz
--
-margin
+padding
 -
 start
 :
-16px
+0
 ;
 }
-button
-[
-dlgtype
-=
-"
-extra2
-"
-]
-{
+.
+version
 -
-moz
+label
+.
+trademark
 -
-margin
--
-start
-:
-13px
-;
-}
-button
-[
-dlgtype
-=
-"
-accept
-"
-]
-{
--
-moz
--
-margin
--
-end
-:
-13px
-;
-}
+label
 .
 text
 -
@@ -479,8 +317,56 @@ padding
 :
 0px
 ;
-border
+}
+.
+bottom
+-
+link
+.
+bottom
+-
+link
 :
-0px
+focus
+{
+text
+-
+align
+:
+center
+;
+margin
+:
+0
+40px
+;
+}
+#
+trademark
+{
+font
+-
+size
+:
+xx
+-
+small
+;
+text
+-
+align
+:
+center
+;
+color
+:
+#
+999999
+;
+margin
+-
+top
+:
+10px
 ;
 }
