Fixed passwordmgr/test/test_notifications.html to work with new strings a=bustage
UltraBlame original commit: 1b992627cdac5abce408877bc908be7293bdc65e

--- a/toolkit/components/passwordmgr/test/test_notifications.html
+++ b/toolkit/components/passwordmgr/test/test_notifications.html
@@ -2955,14 +2955,7 @@ expectedText
 =
 /
 ^
-Do
-you
-want
-.
-+
-to
-remember
-the
+Remember
 password
 for
 \
@@ -3092,14 +3085,7 @@ expectedText
 =
 /
 ^
-Do
-you
-want
-.
-+
-to
-remember
-the
+Remember
 password
 for
 \
@@ -3229,14 +3215,7 @@ expectedText
 =
 /
 ^
-Do
-you
-want
-.
-+
-to
-remember
-this
+Remember
 password
 on
 example
