--- a/toolkit/themes/gnomestripe/global/notification.css
+++ b/toolkit/themes/gnomestripe/global/notification.css
@@ -179,21 +179,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-information
+gtk
 -
-16
-.
-png
+dialog
+-
+info
+?
+size
+=
+menu
 "
 )
 ;
@@ -218,21 +220,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-warning
+gtk
 -
-16
-.
-png
+dialog
+-
+warning
+?
+size
+=
+menu
 "
 )
 ;
@@ -257,21 +261,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-error
+gtk
 -
-16
-.
-png
+dialog
+-
+error
+?
+size
+=
+menu
 "
 )
 ;
