Bug 593967 - Add more elements into tabbrowser tabs for easier stylability. r=gavin
UltraBlame original commit: 875f1912a091cda7af2b4bc3da71a8e4cae63f68

--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -131,17 +131,17 @@ closeatend
 ]
 )
 >
+*
+>
+*
+>
+*
 .
-tabbrowser
--
 tab
-[
-selected
-=
-"
-true
-"
-]
+-
+close
+-
+button
 :
 not
 (
@@ -149,13 +149,13 @@ not
 pinned
 ]
 )
->
-.
-tab
--
-close
--
-button
+[
+selected
+=
+"
+true
+"
+]
 .
 tabbrowser
 -
@@ -168,17 +168,11 @@ alltabs
 "
 ]
 >
-.
-tabbrowser
--
-tab
-:
-not
-(
-[
-pinned
-]
-)
+*
+>
+*
+>
+*
 >
 .
 tab
@@ -186,6 +180,13 @@ tab
 close
 -
 button
+:
+not
+(
+[
+pinned
+]
+)
 {
 display
 :
@@ -193,6 +194,55 @@ display
 moz
 -
 box
+;
+}
+.
+tab
+-
+close
+-
+button
+[
+selected
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+user
+-
+focus
+:
+normal
+;
+}
+.
+tab
+-
+label
+[
+pinned
+]
+{
+display
+:
+none
+;
+}
+.
+tab
+-
+stack
+{
+vertical
+-
+align
+:
+middle
 ;
 }
 tabpanels
