--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -11239,64 +11239,13 @@ height
 tabbrowser
 -
 tab
->
-.
-tab
--
-text
-{
-border
-:
-1px
-dotted
-transparent
-;
-margin
-:
--
-1px
-!
-important
-;
-}
-.
-tabbrowser
--
-tab
 :
 focus
 >
 .
 tab
 -
-text
-{
-border
-:
-1px
-dotted
--
-moz
--
-DialogText
-;
-}
-.
-tabbrowser
--
-tab
-[
-pinned
-]
-:
-focus
->
-.
-tab
--
-icon
--
-image
+stack
 {
 outline
 :
@@ -11372,19 +11321,14 @@ rect
 ;
 }
 .
-tabbrowser
--
-tab
-[
-pinned
-]
->
-.
 tab
 -
 icon
 -
 image
+[
+pinned
+]
 .
 tabs
 -
@@ -11417,19 +11361,14 @@ end
 ;
 }
 .
-tabbrowser
--
-tab
-[
-busy
-]
->
-.
 tab
 -
 icon
 -
 image
+[
+busy
+]
 {
 list
 -
@@ -11475,22 +11414,17 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
 [
 stalled
 ]
->
-.
-tab
--
-icon
--
-image
 {
 list
 -
@@ -11523,9 +11457,11 @@ important
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11536,13 +11472,6 @@ progress
 1
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11561,9 +11490,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11574,13 +11505,6 @@ progress
 2
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11599,9 +11523,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11612,13 +11538,6 @@ progress
 3
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11637,9 +11556,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11650,13 +11571,6 @@ progress
 4
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11675,9 +11589,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11688,13 +11604,6 @@ progress
 5
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11713,9 +11622,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11726,13 +11637,6 @@ progress
 6
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11751,9 +11655,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11764,13 +11670,6 @@ progress
 7
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11789,9 +11688,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11802,13 +11703,6 @@ progress
 8
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -12098,35 +11992,6 @@ end
 :
 -
 1px
-;
-}
-.
-tabbrowser
--
-tab
-[
-selected
-=
-"
-true
-"
-]
->
-.
-tab
--
-close
--
-button
-{
--
-moz
--
-user
--
-focus
-:
-normal
 ;
 }
 .
