--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -206,10 +206,20 @@ tabbrowser
 -
 tab
 :
+not
+(
+:
+hover
+)
+>
+*
+>
+*
+>
+.
+tab
 -
-moz
--
-lwtheme
+label
 :
 not
 (
@@ -222,16 +232,10 @@ true
 ]
 )
 :
-not
-(
-:
-hover
-)
->
-.
-tab
 -
-text
+moz
+-
+lwtheme
 {
 opacity
 :
@@ -10665,19 +10669,14 @@ png
 ;
 }
 .
-tabbrowser
--
-tab
-[
-busy
-]
->
-.
 tab
 -
 icon
 -
 image
+[
+busy
+]
 {
 list
 -
@@ -10723,22 +10722,17 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
 [
 stalled
 ]
->
-.
-tab
--
-icon
--
-image
 {
 list
 -
@@ -10771,9 +10765,11 @@ important
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10784,13 +10780,6 @@ progress
 1
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -10809,9 +10798,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10822,13 +10813,6 @@ progress
 2
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -10847,9 +10831,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10860,13 +10846,6 @@ progress
 3
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -10885,9 +10864,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10898,13 +10879,6 @@ progress
 4
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -10923,9 +10897,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10936,13 +10912,6 @@ progress
 5
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -10961,9 +10930,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10974,13 +10945,6 @@ progress
 6
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -10999,9 +10963,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11012,13 +10978,6 @@ progress
 7
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11037,9 +10996,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11050,13 +11011,6 @@ progress
 8
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11084,6 +11038,17 @@ not
 :
 hover
 )
+>
+*
+>
+*
+>
+.
+tab
+-
+icon
+-
+image
 :
 not
 (
@@ -11095,13 +11060,6 @@ true
 "
 ]
 )
->
-.
-tab
--
-icon
--
-image
 {
 opacity
 :
@@ -11110,14 +11068,9 @@ opacity
 ;
 }
 .
-tabbrowser
--
-tab
->
-.
 tab
 -
-text
+label
 {
 margin
 -
@@ -11987,7 +11940,7 @@ focus
 .
 tab
 -
-text
+stack
 {
 box
 -
@@ -12487,35 +12440,6 @@ active
 png
 "
 )
-;
-}
-.
-tabbrowser
--
-tab
-[
-selected
-=
-"
-true
-"
-]
->
-.
-tab
--
-close
--
-button
-{
--
-moz
--
-user
--
-focus
-:
-normal
 ;
 }
 .
