--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -10795,19 +10795,14 @@ important
 ;
 }
 .
-tabbrowser
--
-tab
-[
-busy
-]
->
-.
 tab
 -
 icon
 -
 image
+[
+busy
+]
 {
 list
 -
@@ -10853,22 +10848,17 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
 [
 stalled
 ]
->
-.
-tab
--
-icon
--
-image
 {
 list
 -
@@ -10901,9 +10891,11 @@ important
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10914,13 +10906,6 @@ progress
 1
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -10939,9 +10924,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10952,13 +10939,6 @@ progress
 2
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -10977,9 +10957,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -10990,13 +10972,6 @@ progress
 3
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11015,9 +10990,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11028,13 +11005,6 @@ progress
 4
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11053,9 +11023,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11066,13 +11038,6 @@ progress
 5
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11091,9 +11056,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11104,13 +11071,6 @@ progress
 6
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11129,9 +11089,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11142,13 +11104,6 @@ progress
 7
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11167,9 +11122,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+icon
+-
+image
 [
 busy
 ]
@@ -11180,13 +11137,6 @@ progress
 8
 "
 ]
->
-.
-tab
--
-icon
--
-image
 {
 -
 moz
@@ -11287,19 +11237,14 @@ height
 ;
 }
 .
-tabbrowser
--
-tab
-[
-pinned
-]
->
-.
 tab
 -
 icon
 -
 image
+[
+pinned
+]
 {
 -
 moz
@@ -11324,64 +11269,13 @@ end
 tabbrowser
 -
 tab
->
-.
-tab
--
-text
-{
-border
-:
-1px
-dotted
-transparent
-;
-margin
-:
--
-1px
-!
-important
-;
-}
-.
-tabbrowser
--
-tab
 :
 focus
 >
 .
 tab
 -
-text
-{
-border
-:
-1px
-dotted
--
-moz
--
-DialogText
-;
-}
-.
-tabbrowser
--
-tab
-[
-pinned
-]
-:
-focus
->
-.
-tab
--
-icon
--
-image
+stack
 {
 outline
 :
@@ -11524,18 +11418,6 @@ button
 :
 hover
 .
-tabbrowser
--
-tab
-[
-selected
-=
-"
-true
-"
-]
->
-.
 tab
 -
 close
@@ -11543,6 +11425,13 @@ close
 button
 :
 hover
+[
+selected
+=
+"
+true
+"
+]
 {
 -
 moz
@@ -11571,18 +11460,6 @@ hover
 :
 active
 .
-tabbrowser
--
-tab
-[
-selected
-=
-"
-true
-"
-]
->
-.
 tab
 -
 close
@@ -11592,6 +11469,13 @@ button
 hover
 :
 active
+[
+selected
+=
+"
+true
+"
+]
 {
 -
 moz
@@ -11610,9 +11494,11 @@ rect
 ;
 }
 .
-tabbrowser
--
 tab
+-
+close
+-
+button
 [
 selected
 =
@@ -11620,13 +11506,6 @@ selected
 true
 "
 ]
->
-.
-tab
--
-close
--
-button
 {
 -
 moz
@@ -11642,15 +11521,6 @@ rect
 16px
 0
 )
-;
--
-moz
--
-user
--
-focus
-:
-normal
 ;
 }
 .
