Bug 587908 - On hyperlink hover, display the target in the location bar. r=dao, a=blocking-beta7
UltraBlame original commit: 0caec4ddff7470c35e29285703bc1e98bc8770a4

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -7073,15 +7073,14 @@ padding
 0
 ;
 }
-#
-urlbar
->
 .
-autocomplete
+urlbar
+-
+frontcap
+-
+and
 -
 textbox
--
-container
 {
 -
 moz
@@ -7095,11 +7094,8 @@ direction
 ltr
 ;
 }
-#
-urlbar
->
 .
-autocomplete
+urlbar
 -
 history
 -
@@ -7247,27 +7243,6 @@ start
 ;
 }
 #
-wrapper
--
-urlbar
--
-container
-#
-urlbar
->
-.
-autocomplete
--
-history
--
-dropmarker
-{
-display
-:
-none
-;
-}
-#
 urlbar
 -
 display
@@ -7377,6 +7352,143 @@ treebody
 direction
 :
 ltr
+;
+}
+.
+urlbar
+-
+over
+-
+link
+-
+layer
+{
+margin
+:
+-
+2px
+0
+;
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+}
+.
+urlbar
+-
+origin
+-
+label
+{
+padding
+:
+0
+0
+0
+4px
+;
+margin
+:
+0
+;
+}
+.
+urlbar
+-
+over
+-
+link
+-
+box
+{
+position
+:
+relative
+;
+right
+:
+0
+;
+color
+:
+GrayText
+;
+padding
+:
+0
+5px
+0
+18px
+;
+min
+-
+height
+:
+22px
+;
+background
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+urlbar
+-
+over
+-
+link
+-
+arrow
+.
+png
+)
+no
+-
+repeat
+left
+center
+;
+}
+.
+urlbar
+-
+over
+-
+link
+-
+host
+-
+label
+.
+urlbar
+-
+over
+-
+link
+-
+path
+-
+label
+{
+padding
+:
+0
+;
+margin
+:
+0
 ;
 }
 #
@@ -9414,7 +9526,7 @@ png
 margin
 :
 -
-1px
+2px
 ;
 -
 moz
