--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -6023,18 +6023,8 @@ margin
 1px
 ;
 }
-#
+.
 urlbar
->
-.
-autocomplete
--
-textbox
--
-container
->
-.
-textbox
 -
 input
 -
@@ -6363,50 +6353,6 @@ width
 ;
 }
 #
-wrapper
--
-urlbar
--
-container
->
-*
->
-*
->
-*
->
-*
->
-#
-identity
--
-icon
--
-labels
-#
-wrapper
--
-urlbar
--
-container
->
-*
->
-*
->
-.
-autocomplete
--
-history
--
-dropmarker
-{
-display
-:
-none
-;
-}
-#
 urlbar
 -
 display
@@ -6518,6 +6464,145 @@ top
 margin
 -
 bottom
+:
+0
+;
+}
+.
+urlbar
+-
+origin
+-
+label
+{
+padding
+:
+0
+0
+0
+1px
+;
+margin
+:
+0
+;
+}
+.
+urlbar
+-
+origin
+-
+label
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+-
+moz
+-
+padding
+-
+start
+:
+4px
+;
+}
+.
+urlbar
+-
+over
+-
+link
+-
+box
+{
+position
+:
+relative
+;
+right
+:
+0
+;
+color
+:
+GrayText
+;
+padding
+:
+0
+5px
+0
+18px
+;
+min
+-
+height
+:
+20px
+;
+background
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+urlbar
+-
+over
+-
+link
+-
+arrow
+.
+png
+)
+no
+-
+repeat
+left
+center
+;
+}
+.
+urlbar
+-
+over
+-
+link
+-
+host
+-
+label
+.
+urlbar
+-
+over
+-
+link
+-
+path
+-
+label
+{
+padding
+:
+0
+;
+margin
 :
 0
 ;
