--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -7065,10 +7065,6 @@ margin
 1px
 3px
 ;
-padding
-:
-2px
-;
 background
 -
 clip
@@ -7116,6 +7112,66 @@ rgba
 .
 4
 )
+;
+}
+.
+urlbar
+-
+textbox
+-
+container
+{
+margin
+-
+top
+:
+2px
+;
+margin
+-
+bottom
+:
+2px
+;
+margin
+-
+right
+:
+2px
+;
+}
+.
+urlbar
+-
+frontcap
+{
+margin
+-
+top
+:
+2px
+;
+margin
+-
+bottom
+:
+2px
+;
+margin
+-
+left
+:
+2px
+;
+}
+.
+searchbar
+-
+textbox
+{
+padding
+:
+2px
 ;
 }
 media
@@ -7178,40 +7234,18 @@ color
 black
 ;
 }
-#
+html
+|
+*
+.
 urlbar
+-
+input
 :
 -
 moz
 -
 lwtheme
->
-.
-autocomplete
--
-textbox
--
-container
->
-.
-textbox
--
-input
--
-box
->
-html
-|
-*
-.
-textbox
--
-input
-:
--
-moz
--
-placeholder
 .
 searchbar
 -
@@ -7461,42 +7495,14 @@ start
 0
 ;
 }
-#
-wrapper
--
-urlbar
--
-container
->
-#
-urlbar
--
-container
->
-#
-urlbar
->
 .
-autocomplete
--
-history
--
-dropmarker
-{
-display
-:
-none
-;
-}
-#
 urlbar
->
-.
-autocomplete
+-
+frontcap
+-
+and
 -
 textbox
--
-container
 {
 direction
 :
@@ -7576,6 +7582,118 @@ margin
 end
 :
 3px
+;
+}
+.
+urlbar
+-
+origin
+-
+label
+{
+padding
+:
+0
+0
+0
+4px
+;
+margin
+:
+0
+;
+}
+.
+urlbar
+-
+over
+-
+link
+-
+box
+{
+position
+:
+relative
+;
+right
+:
+0
+;
+color
+:
+GrayText
+;
+padding
+:
+0
+5px
+0
+18px
+;
+min
+-
+height
+:
+22px
+;
+background
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+urlbar
+-
+over
+-
+link
+-
+arrow
+.
+png
+)
+no
+-
+repeat
+left
+center
+;
+}
+.
+urlbar
+-
+over
+-
+link
+-
+host
+-
+label
+.
+urlbar
+-
+over
+-
+link
+-
+path
+-
+label
+{
+padding
+:
+0
+;
+margin
+:
+0
 ;
 }
 #
@@ -7922,11 +8040,8 @@ translate
 )
 ;
 }
-#
-urlbar
->
 .
-autocomplete
+urlbar
 -
 history
 -
@@ -7991,11 +8106,8 @@ rect
 )
 ;
 }
-#
-urlbar
->
 .
-autocomplete
+urlbar
 -
 history
 -
@@ -8022,11 +8134,8 @@ width
 4mozmm
 ;
 }
-#
-urlbar
->
 .
-autocomplete
+urlbar
 -
 history
 -
@@ -8035,11 +8144,8 @@ dropmarker
 hover
 :
 active
-#
-urlbar
->
 .
-autocomplete
+urlbar
 -
 history
 -
@@ -8877,20 +8983,6 @@ go
 png
 "
 )
-;
-margin
-:
--
-2px
-;
--
-moz
--
-margin
--
-start
-:
-0
 ;
 padding
 :
